Actions per trike

--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -33,7 +33,7 @@
 
 ## Catrike
 
-- name: 700
+- name: "700"
   brand: Catrike
   img: https://www.hostelshoppe.com/images/products/lb_13cat_700.jpg
   msrp: $2950
