--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -70,6 +70,29 @@
   rental_rate_week: $250
 
 
+## Trisled
+
+- name: Rotovelo
+  brand: Trisled
+  img: http://www.trisled.com.au/images_content/rotovelo_spec_photo_02.png
+  msrp: $6850
+  steering: Direct
+  wheels: 20"
+  url: "http://www.trisled.com.au/rotovelo.asp"
+  rental_rate_week: $600
+
+- name: Gizmo
+  brand: Trisled
+  img: http://www.spincyclz.com/images/trisled_product_pics/500x300_main/g1.jpg
+  msrp: $3700
+  wheels: 20"x26"
+  steering: Direct
+  url: "http://www.catrike.com/#!expedition/c2465"
+  rental_rate_week: $350
+
+
+
+
 ## TerraTrike
 
 - name: Rover
