Gizmo is not a catrike

--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -87,7 +87,7 @@
   msrp: $3700
   wheels: 20"x26"
   steering: Direct
-  url: "http://www.catrike.com/#!expedition/c2465"
+  url: "http://www.trisled.com.au/gizmo.asp"
   rental_rate_week: $350
 
 
