Include brand logos and links

--- a/_data/manufacturers.yml
+++ b/_data/manufacturers.yml
@@ -2,7 +2,7 @@
   url: http://www.icetrikes.co/
   description: UK touring and performance recumbent trikes
 
-- name: KMX USA
+- name: KMX
   url: http://www.kmxus.com/
   description: Tadpole trikes from kids to adults
 
