They sell TRIKES

--- a/_data/manufacturers.yml
+++ b/_data/manufacturers.yml
@@ -18,4 +18,4 @@
 - name: TerraTrike
   url: http://www.terratrike.com/
   icon: http://www.terratrike.com/images/pageElements/favicon.ico
-  description: Recumbent for every need and budget
+  description: Recumbent trikes for every need and budget
