Quick copy edits

--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -15,7 +15,7 @@
   brand: ICE
   img: http://www.icetrikes.co/image/overlay/st2011%209%20sprint%20FS.jpg
   msrp: $4188.36
-  wheels: 20"x26"
+  wheels: 20"
   steering: Indirect
   folding: True
   suspension: Front + Rear
