--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -212,8 +212,8 @@
   url: "http://www.terratrike.com/rover.php"
   rental_rate_week: $125
   description: > 
-    The ROVER offerings are being updated for 2014, with the Auto 2, and Auto
-    NuVinci that will start shipping around spring time. The Rover can be
+    The ROVER offerings are being updated for 2014, with an autshifting 2 speed hub, and an Auto shifting
+    CVT NuVinci hub that will start shipping around spring time. The Rover can be
     converted to a tandem, with and optional Independent Pedaling System.
     The Terratrike Rover is highly adjustable with extandable booms, sliding
     seats with 11.5" of range, angle adjustable seat from 35-70deg., a 16.5"
