Add order button

--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -162,6 +162,7 @@
   steering: Direct
   wheels: 20"
   url: "http://www.trisled.com.au/rotovelo.asp"
+  order_url: "http://www.utahtrikes.com/PROD-11617955.html"
   rental_rate_week: $600
   description: >
     The Rotovelo is the first velomobile to ever be constructed from roto-molded
