--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -324,7 +324,11 @@
     Adjustable hand/mud guards protect the rider's hands as your little 
     one maneuvers on the dirt trails or your neighborhood streets.  Our 
     daugther loves hers and rides like a champ.  This awesome KMX model 
-    means no more bad childhood memories of taking a needless wipeout.
+    means no more bad childhood memories of taking a needless wipeout. 
+    The K-3 is a great introduction to the exciting world of KMX. Made 
+    for kids with safety in mind ages 4-12.  There is 7.5” of fast easy 
+    seat adjustment via quick release clamps and 2.5” of sliding boom 
+    adjustment. Available in Red or Black.
   compare:
     comfort: 4
     speed: 2
@@ -339,9 +343,9 @@
   rental_rate_week: $50
   description: >
     Great for smaller people and kids of all abilities due to low center 
-    of gravity and high stability. The Kompact has 11.5cm of Sliding 
-    Front Boom for easy rider height adjustment. The Kompact R is a great 
-    trike for Children and small adults under 5-foot tall. For taller 
+    of gravity and high stability. The Kompact has 4.5" of sliding 
+    front boom for easy rider height adjustment. The Kompact R is a great 
+    trike for children and small adults under 5-foot tall. For taller 
     adults we recommend the KMX Typhoon. Other Features include a Self 
     adjusting chain tensioner, Direct Steer for responsive handling, 
     KMX Hardshell Bucket Seat featuring multiple angle seat position,
